Updated by task 'AutomatedMDTask_1699554248964_TM-MT_1699554283234'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/b0a749e54c70bdc8b98801c9920f972f34a8ee5f

--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -5,10 +5,11 @@ doc-type: release notes
 last-update: May 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: c08bbc9f5d6e25782426c3cc7ee9ccdc43157a1f
-workflow-type: ht
-source-wordcount: '5459'
-ht-degree: 100%
+exl-id: 50843662-c272-43de-a737-04a0ee20cb0b
+source-git-commit: 53e36cf4a14b8917af8ca264eab876d16bac3731
+workflow-type: tm+mt
+source-wordcount: '5462'
+ht-degree: 99%
 
 ---
 
@@ -154,7 +155,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 針對 Adobe [!DNL Real-Time Customer Data Platform] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 5 月 | [在 [!DNL Real-Time Customer Data Platform] 中設定  [!DNL Adobe Target]  目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/configure-the-target-destination.html) | 影片 | 了解如何在 [!DNL Real-Time Customer Data Platform] 中設定 Adobe Target 目的地以開始從 [!DNL Real-Time CDP] 傳送區段和設定檔屬性到 [!DNL Adobe Target]。 | [!DNL Real-Time CDP]、[!DNL Adobe Target] |
 | 2023 年 5 月 | [分享區段和設定檔屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 Adobe [!DNL Real-Time Customer Data Platform] 分享區段和設定檔屬性到 [!DNL Adobe Target] 以在您的網站、行動應用程式和其他數位資產中顯示即時個人化內容。 | [!DNL Adobe Target] |
@@ -208,7 +209,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 針對 CJA 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 5 月 | [什麼是 Customer Journey Analytics？](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/cja-basics/what-is-customer-journey-analytics.html) | 影片 | 了解如何使用 Adobe Experience Platform 中可用的任何資料來分析客戶的跨管道歷程。 |
 | 2023 年 5 月 | [在 Analysis Workspace 中將篩選器用作維度](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/use-filters-as-dimensions.html) | 影片 | 了解如何在 Analysis Workspace 專案中將篩選器用作維度時來比較和視覺化篩選器。 |
@@ -236,7 +237,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 [!DNL Audience Manager] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [錯誤：_由於已啟用區段共用，不允許刪除_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21790.html) | 新文章 | 了解如何解決「_由於已啟用區段共用，不允許刪除_」錯誤。 |
 | 2023 年 4 月 | [未預期的 AAM UI 存取權](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21831.html) | 新文章 | 了解如何解決使用者有 AAM UI 存取權但沒有特定 AAM 權限的問題。 |
@@ -257,7 +258,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
-Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
+Adobe 建議您瀏覽以下資源，以隨時掌握發布內容資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
 * [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
@@ -296,9 +297,9 @@ _新功能_
 * **[使用 Open API 3.0 整合 REST 端點](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30)** – 順暢地整合到支援 Open API 3.0 的記錄系統，以使用表單資料模型擷取資料。
 * **[共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html)** – 使用最適化表單審閱機制讓一個或多個審核者審閱表單。
 
-### Headless 最適化表單早期採用者計劃
+### Headless 調適型表單早期採用者計劃
 
-使用 Headless 最適化表單讓您的開發人員能夠建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 最適化表單可協助您：
+使用 Headless 最適化表單讓您的開發人員能夠建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：
 
 * 使用您選擇的程式語言建置高品質的多管道表單。
 * 以原生方式將表單整合到您的桌面和行動應用程式、網站和聊天應用程式
@@ -333,7 +334,7 @@ _版本重點_
 
 _已知問題_
 
-* 使用 AEM 6.4 設定專案連結的資料夾時，[!DNL Experience Manager] 未儲存「**子資料夾**」和「**在產品組合的專案中建立連結的資料夾**」欄位的值。「**子資料夾**」欄位的值更新為&#x200B;**未定義**。在儲存設定後，「**在產品組合的專案中建立連結的資料夾**」欄位的值自動更新為&#x200B;**預設產品組合**。
+* 使用 AEM 6.4 設定專案連結的資料夾時，[!DNL Experience Manager] 未儲存「**子資料夾**」和「**在產品組合的專案中建立連結的資料夾**」欄位的值。「**子資料夾**」欄位的值更新為&#x200B;**未定義**。儲存設定後，「**在產品組合的專案中建立連結的資料夾**」欄位的值會自動更新為&#x200B;**預設產品組合**。
 * 當您使用傳統 Workfront 體驗時，「**更多**」下拉式清單中的「**傳送至**」選項不允許您選取 Experience Manager 中的目標目的地。使用「**文件動作**」下拉式清單時，「**傳送至**」選項正常運作。在使用新的 Workfront 體驗時，「**更多**」下拉式清單和「**文件動作**」下拉式清單的「**傳送至**」選項正常運作。
 
 ### 社群
@@ -366,7 +367,7 @@ _已知問題_
 
 過去一個月內發佈的新影片、教學課程和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- | ------|
 | 2023 年 5 月 | [整合 Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform/web-sdk.html#create-datastream---experience-platform) | 影片 | 了解如何將 AEM as a Cloud Service 與 Experience Platform Web SDK 整合。 | AEM Sites |
 | 2023 年 5 月 | [在互動式通訊中自訂文字編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/interactive-communications/customize-text-editor.html) | 影片 | 在互動式通訊中自訂文字編輯器以新增自訂字型和大小。 | AEM Forms |
@@ -382,7 +383,7 @@ _已知問題_
 
 [!DNL Experience Manager] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 4 月 | [對處理 Null 值的 GraphQL 所做的變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21792.html) | 新文章 | 了解如何解決近期對 GraphQL 實作的改進所造成的應用程式程式碼可能出現的非預期行為 (在 [!DNL Experience Manager as a Cloud Service] 中)。 |
 | 2023 年 4 月 | [在轉出內部 Live Copy 期間未更新參考](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21808.html) | 新文章 | 了解如何解決在轉出內部 Live Copy 期間未更新參考的問題。 |
@@ -398,7 +399,7 @@ _已知問題_
 * [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html)
 * [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html)
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#先前版本更新)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html#aem-as-a-cloud-service)
 
@@ -430,10 +431,10 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 5 月 | [Headless 架構研討會 1](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/headless-architecture/introduction-to-headless/session-1.html) | 影片 | 了解什麼是 Headless 架構、可組合的商務和個人化體驗。 |
-| 2023 年 5 月 | [完整示範[!UICONTROL 即時搜尋]](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search-full-demonstration.html) | 影片 | 觀看[!UICONTROL 即時搜尋]功能和彈性的完整示範。 |
+| 2023 年 5 月 | [完整示範[!UICONTROL 即時搜尋]](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/getting-started/capabilities/live-search-full-demonstration.html?lang=en) | 影片 | 觀看[!UICONTROL 即時搜尋]功能和彈性的完整示範。 |
 | 2023 年 5 月 | [[!UICONTROL 即時搜尋]簡介](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search.html) | 影片 | 了解 Adobe Commerce 的[!UICONTROL 即時搜尋]功能如何提供快速、相關且直覺的搜尋體驗。 |
 | 2023 年 5 月 | [自我裝載的 Adobe Commerce 概觀](https://experienceleague.adobe.com/docs/commerce-operations/implementation-playbook/infrastructure/self-hosting/overview.html) | 影片 | 了解移至電子商務平台時要考慮的自我裝載最佳做法。 |
 
@@ -443,7 +444,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 Adobe Commerce 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 4 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.28、QPT 1.1.29 和 QPT 1.1.30 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
 | 2023 年 4 月 | [新網域重新導向到預設網域](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/new-domain-redirecting.html) | 新文章 | 了解如何解決現有或不同環境中新網域重新導向到預設網域的問題。 |
@@ -480,7 +481,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 [!DNL Adobe Campaign] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 5 月 | [建立意見調查](https://experienceleague.adobe.com/docs/campaign-learn/tutorials/content-creation/create-a-survey.html) | 影片 | 學習如何在 [!DNL Adobe Campaign] v8 中建立意見調查。 | [!DNL Campaign] v8 |
 | 2023 年 5 月 | [建立意見調查](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/create-a-survey.html) | 影片 | 學習如何在 [!DNL Adobe Campaign Classic] 建立意見調查。 | [!DNL Campaign Classic] |
@@ -493,7 +494,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 [!DNL Campaign] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 4 月 | [從值超過 255 個字元的外部資料庫中擷取資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21880.html) | 新文章 | 了解如何從值超過 255 個字元的外部資料庫中擷取資料。 |
 | 2023 年 4 月 | [錯誤：_[!DNL Google BigQuery]外部帳戶中的 XSV-350064_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21895.html) | 新文章 | 了解如何修正&#x200B;_[!DNL Google BigQuery] 外部帳戶中的 XSV-350064_ 錯誤。 |
@@ -524,7 +525,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 Adobe [!DNL Journey Optimizer] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 5 月 | [製作網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/author-a-web-campaign.html) | 影片 | 學習如何在 [!DNL Journey Optimizer] 行銷活動中使用網頁視覺編輯器創造網路體驗。 |
 | 2023 年 5 月 | [建立網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/create-a-web-campaign.html) | 影片 | 了解網路行銷活動是什麼。 了解如何設定網路行銷活動屬性、檢閱及發佈。 |
@@ -600,7 +601,7 @@ New videos, tutorials, or courses published for Adobe Marketo.
 
 Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 5 月 | [透過版面範本新增和管理圖釘](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/layout-templates/add-and-manage-pins-in-layout-template.html) | 影片 | 了解什麼是圖釘以及如何透過版面範本為一組使用者釘選重要或相關的頁面。 |
 | 2023 年 5 月 | [使用 Jira 整合建立可見度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/integrations/jira/jira.html) | 文章 | 快速看一下 Jira 整合如何讓您查看團隊目前工作情況。 |
@@ -631,7 +632,7 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
 [!DNL Workfront] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [無法編輯自訂欄位](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21913.html) | 新文章 | 了解如何解決使用者在編輯自訂欄位時遇到的問題。 |
 
@@ -701,7 +702,7 @@ Last updated: **August 9, 2022**
 
 +++詳細資訊
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 5 月 | [Acrobat Sign + Workday 新員工入職培訓](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/workday/acrobat-sign-workday-onboarding.html) | 影片 | 您可以在組織已經使用的其他應用程式中使用 Acrobat Sign，例如 Microsoft、Salesforce、Workday 和 Marketo 等等。在這些整合指南和教學課程中了解如何簡化電子簽名工作流程。 | Acrobat Sign |
 | 2023 年 5 月 | [傳送文件進行公證](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/notarize/send-document-notarize.html) | 影片 | 了解如何傳送文件進行公證。 | Acrobat Sign |
@@ -750,4 +751,3 @@ See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com
 | -----------| ---------- | ---------- | ---------- |
 |January 2023|[Customer Journeys - AEP + Apps & AJO Architecture](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/customer-journeys/overview.html)|Diagram updates|Deliver individual, just-in-time customer experiences across screens.| 
 -->
-
