Updated by task 'AutomatedMDTask_1705509354140_TM-MT_1705509388180'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/8a85d02fe3fc1c654da8198e61caf563bd766503

--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -6,9 +6,9 @@ last-update: May 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 50843662-c272-43de-a737-04a0ee20cb0b
-source-git-commit: 53e36cf4a14b8917af8ca264eab876d16bac3731
+source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
 workflow-type: tm+mt
-source-wordcount: '5462'
+source-wordcount: '4306'
 ht-degree: 99%
 
 ---
@@ -25,7 +25,7 @@ ht-degree: 99%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -73,17 +73,7 @@ ht-degree: 99%
 
 +++即將到來的活動
 
-* **[!DNL Workfront]**|_連接：行銷和創意方面的管理員閒談_|**6 月 6 日下午 3:00 (美國山區時間)** |[報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,xDk-NFOQNUSCrwRemwbIYw,hTUwAaMesk-RUHhGMuTCKQ,xpzBbYDs1kKxAlpGmXT1JQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL Marketo Engage]**|_Marketo &amp; Mochas - 客戶歷程管理：生命週期模型_|**6 月 8 日下午 1:00 (美國東部時間)** |[報名](https://register.gotowebinar.com/register/8576570459027384151)
-
-* **[!DNL Workfront]**|_諮詢專家：運用免費的 Adobe Workfront + Creative Cloud 整合服務_|**6 月 8 日上午 10:30 (美國山區時間)** |[報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,ueSOCVtFIkmna7wZj0qUpA,vIUNhWnBmkOH38v4q3nQ8A,VszLUMl3W0268EAiz1tQ_w?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL Workfront]** | _連接：Workfront 策略性管理員閒談_ | **6 月 12 日 @ 8:00 AM (美國中部時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,In1kkaMFJ0Kkz4rHJ_FjWA,VULVBg2HWUWGxssI6bizyQ,zDPownyw9EGwqszZO1cshQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL Workfront]**|_諮詢專家：Workfront 服務時間內的資源管理_|**6 月 13 日下午 2:00 (美國山區時間)** |[報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,f3xda2S9qUiQFiyPwkN8bw,X4tGbEP2nEaLWQC3N4UNng,9hWdr3sEFEe7-p-YB9u-yg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-[深入了解...](https://experienceleague.adobe.com/events/)
+另請參閱 [Experience League事件](https://experienceleague.adobe.com/events/)
 
 +++
 
