--- a/c-legacy-releases/2023/09132023.md
+++ b/c-legacy-releases/2023/09132023.md
@@ -6,10 +6,10 @@ last-update: August 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: f56478de-79d0-4bfe-9468-e6f6619dd814
-source-git-commit: f2bfa149c00269a0f6f253724249ec162cc60565
-workflow-type: ht
-source-wordcount: '7206'
-ht-degree: 100%
+source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
+workflow-type: tm+mt
+source-wordcount: '5807'
+ht-degree: 99%
 
 ---
 
@@ -27,7 +27,7 @@ ht-degree: 100%
 
 **需要協助嗎?**
 
-登入 [Experience League](https://experienceleague.adobe.com/#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html)、[課程](https://experienceleague.adobe.com/#courses)和[活動](https://experienceleague.adobe.com/events/)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+登入 [Experience League](https://experienceleague.adobe.com/#home)，在 Adobe 自助資源庫中自訂您的搜尋體驗。 瀏覽所有級別和角色的[產品文件](https://experienceleague.adobe.com/docs/)、[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/#courses)和[活動](https://experienceleague.adobe.com/events/)。向您的同業[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您最需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -75,21 +75,7 @@ ht-degree: 100%
 
 +++即將推出的 Experience League 活動
 
-* **[!DNL ANALYTICS]** | 網路研討會 | _使用 Adob&#x200B;&#x200B;e Analytics 探索並提供可操作分析_ | **10 月 5 日上午 9:00 (英國夏令時間)** | [報名](https://adobeanalyticsemea2023.experienceleague.adobeevents.com/)
-
-* **[!DNL WORKFRONT]** | 網路研討會 | _Adobe Workfront 23.10 有哪些新增功能？_ | **10 月 5 日上午 7:00 (太平洋時間)** | [報名](https://webinars.on24.com/adobe_workfront/whatsnewin2310?partnerref=EXL)
-
-* **[!DNL EXPERIENCE MANAGER]** | 網路研討會 | _Espressos 與 Experience Manager：升級至 Dynamic Media_ | **10 月 5 日下午 1:00 (美國東部時間)** | [報名](https://attendee.gotowebinar.com/register/401473910088026710?source%3CExL)
-
-* **[!DNL WORKFRONT]** | 客戶研討會 | _諮詢專家：透過 Workfront Fusion 實現工作流程自動化_ | **10 月 5 日上午 11:00 (美國山區時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,aYVhAxfDTEaHWan3DDKAJg,hP4GoDgz30K_R39XZWjjfQ,6wmf7dtjHkG6osxVzGe7nQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL WORKFRONT]** | 社群活動 | _交流：行銷和創意方面的管理員閒談_ | **北美山區時間 10 月 6 日上午 10:00** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,GEPFgV3sAkazC0HNeX4Qiw,MfXhfQkRaEeNxpVhAjrevw,etCOBCAjk0iAVD0DNRskXQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL WORKFRONT]** | 客戶研討會 | _管理員基本知識：讓您的使用者使用 Workfront_ | **北美山區時間 10 月 17 日上午 9:00** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,omfk3au070S9BM8uw0Q-eQ,hQB5-0lLTEqbiy3szpaQ7Q,IAorw9UUG0Kzb9zZNhCeEA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL AEM]** 和 **[!DNL COMMERCE]** | Developers Live | _Content and Commerce：深入探討 [!UICONTROL Edge Delivery Services]、Headless 功能、擴充性、可組合性和生產力工具_ | **11 月 6 日上午 9:00 (北美山區時區)** | [報名](https://developerevents.adobe.com/events/details/adobe-developer-events-developer-experience-presents-adobe-developers-live-content-and-commerce/?code=release)
-
-查看全部[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html)。您可以使用左側導覽並按系列類型和應用來查詢活動錄影內容。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
@@ -493,16 +479,16 @@ _已知問題_
 |---------|--------|---------|---------|
 | 2023 年 8 月 | [無法選取  [!DNL Adobe Target]  做為 Cloud 解決方案 (針對  [!DNL IMS]  設定](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22693.html)) | 新文章 | 了解嘗試建立 [!DNL Adobe Target IMS] 設定以整合 [!DNL AEM] 與 [!DNL Adobe Target] 時傳回錯誤的解決方案。 |
 | 2023 年 8 月 | [[!DNL Adobe Experience Manager]：如何在頁面縮圖的「選取影像」中啟用搜尋列](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22690.html) | 新文章 | 了解如何在頁面縮圖的「選取影像」中啟用搜尋列。 |
-| 2023 年 8 月 | [[!DNL Adobe Experience Manager Forms]: How to change [!DNL JBoss®] 記錄路徑？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22689.html) | 新文章 | 了解如何變更 [!DNL JBoss®] 記錄路徑 (在 [!DNL AEM Forms] 上，[!DNL Windows Server] 環境中)。 |
+| 2023 年 8 月 | [[!DNL Adobe Experience Manager Forms]：如何變更 [!DNL JBoss®] 記錄路徑？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22689.html) | 新文章 | 了解如何變更 [!DNL JBoss®] 記錄路徑 (在 [!DNL AEM Forms] 上，[!DNL Windows Server] 環境中)。 |
 | 2023 年 8 月 | [在「作者」上刪除內容之後，內容並未從預覽取消發布](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22685.html) | 新文章 | 了解解決方法：如果先前已發布至預覽的頁面在未先從預覽停用的情況下刪除，就不會從預覽中刪除。 |
 | 2023 年 8 月 | [上傳之 mp4 影片資產的縮圖為黑色](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22671.html) | 新文章 | 了解上傳 mp4 檔案後的解決方法；產生的縮圖為黑色。 |
-| 2023 年 8 月 | [[!DNL GraphQL API] in [!DNL AEMaaCS] 無法擴充](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22619.html) | 新文章 | 了解有關 [!DNL GraphQL API] (在 [!DNL AEMaaCS] 中) 無法擴充的資訊。 |
+| 2023 年 8 月 | [[!DNL GraphQL API] 在 [!DNL AEMaaCS] 不可擴充](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22619.html) | 新文章 | 了解有關 [!DNL GraphQL API] (在 [!DNL AEMaaCS] 中) 無法擴充的資訊。 |
 | 2023 年 8 月 | [[!DNL AEM GraphQL] 設定問題](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22615.html) | 新文章 | 了解在開發應從其 [!DNL AEM] 執行個體 (使用 [!DNL AEM] 無周邊解決方案) 擷取資料的網站時，應如何進行設定。 |
 | 2023 年 8 月 | [ [!DNL New Relic] 中缺少生產執行個體](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22582.html) | 新文章 | 了解應用程式監控服務 *[!DNL New Relic]* 中未顯示生產執行個體的解決方法。 |
 
 {style="table-layout:auto"}
 
-### 適用於 的其他說明資源[!DNL Experience Manager]
+### [!DNL Experience Manager] 的其他說明資源
 
 * [Experience Manager as a Cloud Service 指南](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/home.html?lang=zh-Hant)
 * [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html?lang=zh-Hant)
@@ -561,7 +547,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 8 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.34、[!DNL QPT] 1.1.35 與 [!DNL QPT] 1.1.36 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
 | 2023 年 8 月 | [[!DNL USPS Ground Advantage] 運送方式支援 Hotfix (適用於  [!DNL AC-9182])](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/usps-ground-advantage-shipping-method-support-hotfix-for-ac-9182.html) | 新文章 | 了解可在 Adobe Commerce 2.4.4 - 2.4.6-p2 中解決 [!DNL AC-9182] (新 [!DNL USPS Ground Advantage] 運送方式) 問題的修補程式。 |
 | 2023 年 8 月 | [_[!DNL Error opensearch search engine doesn't exist. Falling back to livesearch.]_](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/error-opensearch-search-engine-doesnt-exist-falling-back-to-livesearch.html) | 新文章 | 了解在 Adobe Commerce 中顯示以下錯誤時的問題解決方案：_[!DNL Error: opensearch search engine doesn't exist. Falling back to livesearch.]_(在使用 [!DNL Live Search] 的雲端基礎結構上)。 |
-| 2023 年 8 月 | [[!DNL JQuery UI] security vulnerability [!DNL CVE-2022-31160] 修正 (適用於 2.4.4、2.4.5 和 2.4.6 版本)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/jquery-cve-2022-31160-fix-2.4.4-2.4.5-2.4.6.html) | 新文章 | 了解有關回報之安全性漏洞 [!DNL CVE-2022-31160] (針對 [!DNL jQuery-UI] 程式庫版本 1.13.1) 的資訊；該版本是在 Adobe Commerce 2.4.4、2.4.5 和 2.4.6 中作為相依性使用。 |
+| 2023 年 8 月 | [[!DNL JQuery UI] 安全性弱點 [!DNL CVE-2022-31160] 2.4.4、2.4.5和2.4.6版的修正](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/jquery-cve-2022-31160-fix-2.4.4-2.4.5-2.4.6.html) | 新文章 | 了解有關回報之安全性漏洞 [!DNL CVE-2022-31160] (針對 [!DNL jQuery-UI] 程式庫版本 1.13.1) 的資訊；該版本是在 Adobe Commerce 2.4.4、2.4.5 和 2.4.6 中作為相依性使用。 |
 | 2023 年 8 月 | [減少在 2.4.6 升級之前顯示已過期 _[!DNL oauth_tokens]_的數量](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/reduce-expired-oauth-tokens-before-2.4.6-upgrade.html) | 新文章 | 了解顯示多個 *[!DNL oauth_tokens]* (在 *[!DNL oauth_token]* 表格中) 之問題的解決方案；該問題可能會導致升級到版本 2.4.6 時發生長時間延遲。 |
 | 2023 年 8 月 | [提交不正確的檔案時出現部署錯誤](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/deployment/deployment-error-when-committing-incorrect-files.html) | 新文章 | 了解解決方案：將不應新增的檔案/資料夾提交至存放庫所導致的部署錯誤問題。 |
 | 2023 年 8 月 | [Adobe Commerce 2024 發佈排程](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/announcements/commerce-announcements/2024-release-schedule.html) | 新文章 | 了解我們更新的 2023 年發布策略，以擴大支援範圍、提供更多安全性更新，並加速創新採用。 |
@@ -616,7 +602,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 8 月 | [將傳遞內容傳送給不在資料庫中的收件者時發生錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22570.html) | 新文章 | 了解解決方法：透過外部檔案嘗試傳送傳遞內容給未儲存在資料庫 ([!DNL DB]) 中的收件者時，在傳遞準備期間擲出錯誤。 |
 | 2023 年 8 月 | [手動複製資料庫快照](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22530.html) | 新文章 | 了解如何建立資料庫快照的手動副本。 |
 | 2023 年 8 月 | [Admin 使用者未收到 [!DNL OOTB ffdaReplicateStagingData] 工作流程的錯誤通知](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22525.html) | 新文章 | 了解解決方案：身為 Admin 使用者，在 [!DNL OOTB ffdaReplicateStagingData] 工作流程發生錯誤時未收到通知。 |
-| 2023 年 8 月 | [[!DNL Campaign Classic]: error enriching [!DNL BigQuery] 資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22687.html) | 新文章 | 了解解決方案：建立從 [!DNL BigQuery] 檢視讀取資料的工作流程，然後透過 [!DNL ACC] 表格新增豐富活動以擴充資料時，執行工作流程錯誤。 |
+| 2023 年 8 月 | [[!DNL Campaign Classic]：擴充時發生錯誤 [!DNL BigQuery] 資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22687.html) | 新文章 | 了解解決方案：建立從 [!DNL BigQuery] 檢視讀取資料的工作流程，然後透過 [!DNL ACC] 表格新增豐富活動以擴充資料時，執行工作流程錯誤。 |
 
 {style="table-layout:auto"}
 
