--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -6,9 +6,9 @@ last-update: March 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: bff918b2-1f21-4375-af54-312347de0b2f
-source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
-workflow-type: ht
-source-wordcount: '4519'
+source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
+workflow-type: tm+mt
+source-wordcount: '3630'
 ht-degree: 100%
 
 ---
@@ -25,7 +25,7 @@ ht-degree: 100%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -57,14 +57,6 @@ ht-degree: 100%
 了解 Experience League 的最新消息。若要向 Adobe 產品專家學習、與之互動或獲得解答，活動是您絕佳的選擇！
 
 +++即將到來的活動
-
-* **[!DNL Workfront]** | _連接：策略性管理員聊天_ | **4 月 10 日 @ 8:00 AM CT** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,-9nSc9EY3Um-uj0-EaoAPg,7VBCpt8DgEOLA67Jwa7ShA,-f6upnI-xUqzViVU-lSHMg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL Target]** | _與 Matthew Baillie 和 Georgia Frailey 一同參加 Adobe Target 社群問答咖啡會_ | **4 月 12 日 @ 8:00 AM PT** |  [報名](https://adobe.ly/3ZV8gUG)
-
-* **[!DNL Workfront]** | _了解：Adobe Workfront 23.2 版概要_ | **4 月 12 日 @ 12:30 PM CT** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,ridfURuXEU6az_bX9g1Cxg,pvTHbLZm3kSbU7ZxfauFMQ,ylMqSUM8BkCkwTFYT5Ve1A?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL Adobe Summit]**|_全年重訪 Summit！_ | **隨選即播** | [詳細資訊](https://business.adobe.com/summit/adobe-summit.html)
 
 請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
@@ -144,7 +136,7 @@ _在 3 月未更新。_
 
 [!DNL Experience Platform] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 2 月 | [ [!DNL Microsoft Bing]  AEP 目的地中沒有對象規模](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21544.html?lang=zh-Hant) | 新文章 | 了解為什麼 [!DNL Bing] 對於傳送到 AEP [!DNL Bing] 目的地的 AEP 區段沒有顯示任何對象規模? |
 | 2023 年 2 月 | [RTCDP 授權附帶的環境 (開發、中繼、生產) 數量是多少？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21590.html?lang=zh-Hant) | 新文章 | 了解 RTCDP 授權附帶的環境和沙箱的數量。 |
@@ -179,7 +171,7 @@ _在 3 月未更新。_
 
 專為 Adobe Analytics 發佈的新影片教學課程、文章和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [Analysis Workspace 中的 RTF 編輯器](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/rich-text-editor-in-analysis-workspace.html) | 已更新的影片 | 了解可讓分析師和行銷人員在 Analysis Workspace 中套用編輯到文字視覺效果 (或說明) 的功能：粗體、斜體、標題、超連結等等。 |
 
@@ -202,7 +194,7 @@ _在 3 月未更新。_
 
 針對 CJA 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [將 Customer Journey Analytics 連線至 Experience Platform 資料來源](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/connections/connecting-customer-journey-analytics-to-data-sources-in-platform.html) | 影片 | Customer Journey Analytics 使用擷取到 Adobe Experience Platform 中的資料集。在 Workspace 中開始資料分析之前，您需要建立一個連線。 |
 
@@ -235,7 +227,7 @@ For self-help resources, see [Audience Manager documentation and tutorials](http
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
-Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
+Adobe 建議您瀏覽以下資源，以隨時掌握發布內容資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
 * [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
@@ -346,7 +338,7 @@ _API 變更_
 
 過去一個月內發佈的新影片、教學課程和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- | ------|
 | 2023 年 3 月 | [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/developing/rde/overview.html) | 影片 | 了解快速開發環境 (RDE)、如何設定和使用它，並了解使用 RDE 的開發生命週期。 | AEM CS |
 | 2023 年 3 月 | [Asset Share Commons 資產套件](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/sharing/assets-share/asset-share-commons-asset-kits.html) | 影片 | 了解如何使用 Asset Share Common 的資產套件功能產生預定、可共用的網頁，這些網頁列出了 AEM Assets 資料夾或集合中的資產。 | AEM Assets |
@@ -357,7 +349,7 @@ _API 變更_
 
 [!DNL Adobe Experience Manager] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 2 月 | [如何允許非管理員使用者存取 Web 控制台？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21527.html?lang=zh-Hant) | 新文章 | 了解如何允許非管理員使用者存取 Web 控制台 (OSGi 主控台)。 |
 | 2023 年 2 月 | [如何使用 cURL 下載資產？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21528.html?lang=zh-Hant) | 新文章 | 如何使用 cURL 下載資產。 |
@@ -373,7 +365,7 @@ _API 變更_
 * [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html)
 * [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html)
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#先前版本更新)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html#aem-as-a-cloud-service)
 
@@ -404,7 +396,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### 適用於 [!DNL Adobe Commerce] 的新教學課程與文件 {#tutorials-commerce}
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [設定 Adobe Commerce](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/io-events/configure-commerce.html) | 影片 | 了解如何設定 Adobe Commerce 以公開事件。 |
 | 2023 年 3 月 | [使用 API Mesh 快速入門](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/api-mesh/getting-started-api-mesh.html) | 影片 | 了解如何在 Adobe Commerce 和 Adobe App Builder 上使用 API Mesh。了解如何安裝 Adobe App Builder、處理專案、建立 GraphQL 反向 Proxy 等。 |
@@ -416,7 +408,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 Adobe Commerce 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 2 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.26 和 QPT 1.1.27 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
 
@@ -451,7 +443,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 Adobe Campaign 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 2 月 | _Adobe Campaign 成功行銷的十大最佳實務_ | 文章 | 了解十大最佳實務，協助 Adobe Campaign 從業人員充分發揮並加速消費者數位轉型，並向客戶提供更佳體驗。 | 請參閱： <ul><li>[Campaign v8](https://experienceleague.adobe.com/docs/campaign-learn/tutorials/strategy/10-best-practices-for-marketers.html)<li>[Campaign Classic](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/strategy/10-best-practices-for-marketers.html)</li><li>[Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/strategy/10-best-practices-for-marketers.html) |
 
@@ -461,7 +453,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 [!DNL Adobe Campaign] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 2 月 | [是否支援 TLS 1.3？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21516.html?lang=zh-Hant) | 新文章 | 了解 TLS 1.3 的支援狀態。 |
 | 2023 年 2 月 | [未顯示設定檔和服務的 API 更新](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21517.html?lang=zh-Hant) | 新文章 | 了解這個問題的解決方法：在最新版本的 ACS 中發佈對長文字屬性的自訂資源變更時，沒有更新 API。 |
@@ -491,7 +483,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 Adobe [!DNL Journey Optimizer] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [設定訓練用沙箱](https://experienceleague.adobe.com/docs/journey-optimizer-learn/configure-a-training-sandbox/introduction-and-prerequisites.html?lang=zh-Hant) | 教學課程 | 了解如何設定用於訓練的沙箱。逐步說明設定結構描述、擷取範例資料和建立事件所需的步驟。 |
 | 2023 年 3 月 | [Journey Optimizer 挑戰](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/introduction-and-prerequisites.html?lang=zh-Hant) | 挑戰 | 挑戰提供了實施您所學知識所需的情境和要求。每個挑戰都說明了您實作的獨特使用案例。 <p>新挑戰：<ul><li>[建立夏季系列發佈](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/summer-collection-announcement-challenge.html)</li><li>[ 建立訂單確認](https://experienceleague.adobe.com/docs/journey-optimizer-learn/challenges/order-confirmation-challenge.html) </li></ul> |
@@ -502,7 +494,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 [!DNL Adobe Journey Optimizer] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|-------|--------|---------|
 | 2023 年 2 月 | [登陸頁面上沒有選擇加入](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21416.html?lang=zh-Hant) | 新文章 | 了解此問題的解決方法：登陸頁面上沒有選擇加入。 |
 | 2023 年 2 月 | [缺少資料流通知](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21415.html?lang=zh-Hant) | 新文章 | 了解此問題的解決方法：您沒有收到有關資料流的通知。 |
@@ -642,7 +634,7 @@ Last updated: **August 9, 2022**
 
 +++詳細資訊
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 3 月 | [傳送文件進行公證](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/notarize/send-document-notarize.html) | 影片 | 了解如何傳送文件進行公證、檢視簽名者的體驗以及接收結果。 | Acrobat Sign |
 
