--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -5,9 +5,10 @@ doc-type: release notes
 last-update: April 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: c08bbc9f5d6e25782426c3cc7ee9ccdc43157a1f
-workflow-type: ht
-source-wordcount: '5606'
+exl-id: 41549c5d-b6e9-426a-a9f0-709f959cfd45
+source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
+workflow-type: tm+mt
+source-wordcount: '4473'
 ht-degree: 100%
 
 ---
@@ -24,7 +25,7 @@ ht-degree: 100%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -58,22 +59,6 @@ ht-degree: 100%
 上次更新日期：**2023 年 4 月 19 日**
 
 +++即將到來的活動
-
-* **[!DNL Workfront]** | _詢問專家：透過自動化提升工作流程清理網路研討會後續追踪_ | **4 月 27 日上午 10:30 (北美山區時區)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,pUGUw4e8dEaYTwHasipYnw,Qp_LrlOtoUKguf3gH4x3HQ,zWCOgeSX_Uy_Zmp7d-ZbTQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL Experience Manager Sites]** | _AEM Sites Supercharger 研討會_ | **4 月 25 日上午 8:00 (太平洋時間)** | [報名](https://adobe.ly/3ZV8gUG)
-
-* **[!DNL Experience Platform]** | _只需點按幾下即可啟動並執行資料收集和事件轉送！_ | **4 月 25 日上午 9:00 (太平洋時間)** | [報名](https://engage.adobe.com/ExpLeagueLive-230425.html)
-
-* **[!DNL Marketo Engage]** | _Marketo Champion 深入分析：電子郵件培養_ | **4 月 25 日上午 10:00 (太平洋時間)** | [報名](https://mugs.marketo.com/events/details/marketo-adobe-deep-dive-mug-presents-marketo-champion-deep-dive-email-nurture/)
-
-* **[!DNL Experience Manager as a Cloud Service]** | _AEM Champion 營業時間 - AEM as a Cloud Service_ | **4 月 27 日上午 7:30 (太平洋時間)** | [報名](https://aem-augs.adobe.com/events/details/adobe-experience-manager-aem-champion-office-hours-presents-adobe-experience-manager-champion-office-hours-aem-as-a-cloud-service/)
-
-* **[!DNL Analytics]** | _建立 Adobe Analytics 專家團隊_ | **4 月 27 日上午 8:00 (太平洋時間)** | [報名](https://engage.adobe.com/Building_an_analytics_team.html?utm_source=experienceleague)
-
-* **[!DNL Target]** | _Adobe Target - 每次都提供個人化的客戶體驗！_ | **4 月 27 日上午 9:00 (英國夏令時間)** | [](https://adobetargetemea2023.experienceleague.adobeevents.com/)
-
-* **[!DNL Adobe Summit]** |_全年重訪 Summit！_ | **隨選即播** | [詳細資訊](https://business.adobe.com/summit/adobe-summit.html)
 
 請查看 [Experience League 活動](https://experienceleague.adobe.com/events/)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
@@ -142,7 +127,7 @@ _在 4 月未更新。_
 
 [!DNL Experience Platform] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [Adobe Experience Platform：meta:enum 不能為空白](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21767.html?lang=zh-Hant) | 新文章 | 了解如何解決 `meta:enum` 不能為空白的問題。 |
 | 2023 年 3 月 | [具有 AEP 啟用授權的客戶是否可以使用事件轉送？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21592.html?lang=zh-Hant) | 新文章 | 了解具有 AEP 啟用授權的客戶如何使用事件轉送。 |
@@ -203,7 +188,7 @@ New video tutorials, articles, and courses published for Adobe Analytics.
 
 針對 CJA 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [將新資料加入到  [!DNL Customer Journey Analytics] 中的連線](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/connections/add-past-data-to-an-existing-connection-in-cja.html) | 已更新的影片 | 了解如何從其他管道將新資料加入到 [!DNL Customer Journey Analytics] 連線以從分析中獲得更多價值。此外，了解合併此新資料的要求，以及對使用組態設定解決之分析和報告的影響。 |
 | 2023 年 4 月 | [在  [!DNL Customer Journey Analytics] 中設定遺漏的人員 ID](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/visitor-id/configure-missing-person-id.html) | 影片 | 了解如何處理沒有人員 ID 可設定的資料集。 |
@@ -231,7 +216,7 @@ _未更新。_
 
 [!DNL Audience Manager] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 3 月 | [Adobe Audience Manager 不支援在選擇退出後選擇加入](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21682.html?lang=zh-Hant) | 新文章 | 了解為什麼 [!DNL Audience Manager] 不支援在選擇退出後選擇加入 |
 | 2023 年 3 月 | [AAM 特徵母體 API 量度定義](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21616.html?lang=zh-Hant) | 新文章 | 進一步了解 AAM 特徵母體 API 量度。 |
@@ -252,7 +237,7 @@ _未更新。_
 
 ### [!DNL Experience Manager] 藍圖和發行版本影片
 
-Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
+Adobe 建議您瀏覽以下資源，以隨時掌握發布內容資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
 * [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
@@ -382,7 +367,7 @@ _已知問題_
 
 過去一個月內發佈的新影片、教學課程和其他課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- | ------|
 | 2023 年 4 月 | [回報使用  [!DNL Analytics] 時出現表單資料欄位值和表單欄位驗證錯誤](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/forms-and-analytics/introduction.html) | 影片 | 了解如何使用標記和 [!DNL Adobe Analytics] 對最適化表單實作分析。此範例將引導您完成設定和實作步驟，以產生富有深入見解、內容為訪客如何與您表單互動的報告。 | AEM [!DNL Forms] |
 | 2023 年 4 月 | [整合 Experience Platform Data Collection 標記和 AEM](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-data-collection-tags/overview.html)。 | 影片 | 了解如何整合 Experience [!DNL Platform Data Collection] 標記和 Adobe Experience Manager。 | AEM [!DNL Sites] |
@@ -398,7 +383,7 @@ _已知問題_
 
 [!DNL Experience Manager] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 3 月 | [更新「僅結構」不會更新語言副本的內容](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21708.html?lang=zh-Hant) | 新文章 | 了解如何解決更新&#x200B;_僅結構_&#x200B;不會更新語言副本內容的問題。 |
 | 2023 年 3 月 | [如何使用 cURL 存取 AEM as a Cloud Service 中的 AEM 執行個體？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21737.html?lang=zh-Hant) | 新文章 | 了解如何使用 cURL 存取 AEM as a Cloud Service 中的 AEM 執行個體。 |
@@ -420,7 +405,7 @@ _已知問題_
 * [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html)
 * [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html)
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#先前版本更新)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html#aem-as-a-cloud-service)
 
@@ -452,7 +437,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [Adobe Developer App Builder](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/first-app/overview.html) | 影片 | 了解如何使用 [!DNL App Builder] 並與您的 Adobe Commerce 網站進行通訊。新的教學課程影片可協助建置您的第一個 [!DNL App Builder] 應用程式。 |
 | 2023 年 4 月 | [API Mesh 快速入門](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/api-mesh/getting-started-api-mesh.html) | 影片 | 了解如何在 [!DNL Adobe Commerce] 和 [!DNL Adobe App Builder] 上使用 API Mesh。了解如何安裝 [!DNL Adobe App Builder]、處理專案、建立 GraphQL 反向 Proxy 等。 <p>相關：新的 [entityId 範例](https://experienceleague.adobe.com/docs/commerce-merchant-services/catalog-service/mesh.html)已新增到 _適用於目錄服務的 API Mesh_ 產品文件中。 |
@@ -464,7 +449,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 Adobe Commerce 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
 | 2023 年 3 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.27 和 QPT 1.1.28 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
 
@@ -499,7 +484,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 Adobe Campaign 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
+| 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 4 月 | [查詢資料](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/data-management/query-data.html) | 影片 | 了解如何使用查詢編輯器查詢資料。 | Campaign v8 |
 | 2023 年 4 月 | [將附件新增至郵件傳遞](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/email-channel/add-attachments-to-an-email-delivery.html) | 影片 | 了解如何將附件新增至郵件傳遞以及如何設定不同類型的電子郵件附件。 | Campaign v8 |
@@ -518,7 +503,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 [!DNL Campaign] 的新文章和現有文章的更新。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 3 月 | [如何擷取詳細 MTA 記錄？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21659.html?lang=zh-Hant) | 新文章 | 了解啟用詳細 MTA 記錄的步驟。 |
 | 2023 年 3 月 | [Adobe Analytics 中傳送負面行銷活動量度](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21660.html?lang=zh-Hant) | 新文章 | 了解為什麼會出現負值以及解決負面行銷活動量度的補救措施。 |
@@ -549,7 +534,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 針對 Adobe [!DNL Journey Optimizer] 發佈的新影片、教學課程或課程。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [使用訊息編輯器匯入及編寫 HTML 電子郵件內容](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/import-and-author-html-email-content.html?lang=zh-Hant) | 已更新的影片 | 瞭解如何匯入現有的 HTML 內容、調整設計、新增鏡像頁面和取消訂閱連結，以及如何編寫內容的程式碼。 |
 | 2023 年 4 月 | [決策管理 - 頻率限定](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/decision-management/frequency-capping.html) | 影片 | 了解 Offer Decisioning 的頻率限定如何運作。了解如何設定自訂事件的頻率限定，以及如何透過定義頻率來設定增量。 |
@@ -628,7 +613,7 @@ New videos, tutorials, or courses published for Adobe Marketo.
 
 Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
-| 已發佈 | 名稱 | 類型 | 說明 |
+| 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [設定 Fusion 練習檔案逐步解說](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/welcome-to-workfront-fusion/set-up-your-fusion-exercise-files-walkthrough.html) | 影片 | 已更新要下載的練習檔案。 |
 | 2023 年 4 月 | [建立和管理工作角色](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/organizational-setup/create-and-manage-job-roles.html) | 影片 | 了解如何建立工作角色並將其與使用者相關聯以做出更好的指派。 |
@@ -748,4 +733,3 @@ See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com
 | -----------| ---------- | ---------- | ---------- |
 |January 2023|[Customer Journeys - AEP + Apps & AJO Architecture](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/customer-journeys/overview.html)|Diagram updates|Deliver individual, just-in-time customer experiences across screens.| 
 -->
-
