Updated by task 'AutomatedMDTask_1706125650281_TM-MT_1706125674281'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/1928c6799fbc8ee5b11e533475e448c8ab1da80b

--- a/c-legacy-releases/2023/10252023.md
+++ b/c-legacy-releases/2023/10252023.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: November 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
+source-git-commit: 1928c6799fbc8ee5b11e533475e448c8ab1da80b
 workflow-type: tm+mt
-source-wordcount: '5549'
+source-wordcount: '5550'
 ht-degree: 98%
 
 ---
@@ -831,7 +831,7 @@ Last updated: **August 9, 2022**
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2023 年 10 月 | Adobe Express | [如何為照片新增效果和調整](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresshowto/image-effects.html) | 影片 | 了解如何為照片新增效果和調整。 |
 | 2023 年 10 月 | Adobe Express | [如何一鍵移除照片背景](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresshowto/remove-background.html?lang=zh-Hant) | 影片 | 了解如何移除照片背景。 |
-| 2023 年 10 月 | 應用程式 | [促進創意創作的效率](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/fireflyoverview/firefly-tutorials/enable-creative-efficiency.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe Photoshop 和 Illustrator 中的生成式 AI 工具加速內容創作。本教學課程使用 Adobe Illustrator 預發行版本。 |
+| 2023 年 10 月 | Adobe Firefly | [促進創意創作的效率](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/fireflyoverview/firefly-tutorials/enable-creative-efficiency.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe Photoshop 和 Illustrator 中的生成式 AI 工具加速內容創作。本教學課程使用 Adobe Illustrator 預發行版本。 |
 
 如需了解最新教學課程，請參閱[適用於企業的 Creative Cloud 教學課程](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html)。
 
