Updating Old File for core commit

--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 8f612076-fc5e-4a83-9195-f7f0647d279d
 source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4968'
-ht-degree: 97%
+ht-degree: 100%
 
 ---
 
@@ -272,7 +272,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發布內容資訊：
 
 ### 最新版本概觀影片
 
-觀看 [2023年2月版本總覽影片](https://video.tv.adobe.com/v/3416885) 2023.02.0 （2023年2月）版本新增功能摘要。 <!-- OLD. UPDATE ON JUNE 7 -->
+觀看 [2023 年 2 月版本概觀影片](https://video.tv.adobe.com/v/3416885)，了解 2023.02.0 (2023 年 2 月) 版本新增功能摘要。<!-- OLD. UPDATE ON JUNE 7 -->
 
 ### [!DNL Experience Manager Sites] as a [!DNL Cloud Service]
 
@@ -288,15 +288,15 @@ _新功能_
 * 為 Dynamic Media 影片傳遞 (啟用 CMAF) 中的自適應串流推出的新通訊協定 (DASH - 基於 HTTP 的動態自適應串流) 支援：<!-- OLD. UPDATE FOR JUNE 7 -->
    * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗。<!-- OLD. UPDATE FOR JUNE 7 -->
    * DASH 是自適應影片串流的國際標準通訊協定，在業界被廣泛採用。<!-- OLD. UPDATE FOR JUNE 7 -->
-   * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html#enable-dash)。即將於歐洲 — 中東 — 非洲推出。<!-- OLD. UPDATE FOR JUNE 7 -->
-* 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖並自訂轉譯。這些檔案現在也支援智慧標籤和智慧裁切功能。<!-- OLD. UPDATE FOR JUNE 7 -->
+   * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html#enable-dash)。歐洲、中東和非洲地區即將提供。<!-- OLD. UPDATE FOR JUNE 7 -->
+* 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧型標記和智慧型裁切功能。<!-- OLD. UPDATE FOR JUNE 7 -->
 
 ### [!DNL Experience Manager Forms] as a [!DNL Cloud Service]
 
 _新功能_
 
-* **[使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html)** – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件提供自訂功能、縮短開發時間，並降低數位註冊體驗的維護成本。<!-- OLD. UPDATE FOR JUNE 7 -->
-* **[前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html)**：為以核心元件為基礎之最適化表單使用標準化的 BEM 型主題。您可以使用前端部署管道部署它們，以增強表單的外觀和風格。它還有助於符合您組織的品牌核准設計准則。<!-- OLD. UPDATE FOR JUNE 7 -->
+* **[使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html)** – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。<!-- OLD. UPDATE FOR JUNE 7 -->
+* **[前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html)**：為以核心元件為基礎之最適化表單使用標準化的 BEM 型主題。您可以使用前端部署管道部署它們，以增強表單的外觀和風格。也可以協助符合您組織認可的品牌設計方針。<!-- OLD. UPDATE FOR JUNE 7 -->
 * **[為以核心元件為基礎的最適化表單產生記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html)** – 為使用核心元件建置的最適化表單，建立包含提交之資料的記錄文件，供一般使用者封存或參考，採列印或文件格式。<!-- OLD. UPDATE FOR JUNE 7 -->
 * **[使用儲存最適化表單做為範本功能高效建置表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html#save-an-adaptive-form-as-template-saving-adaptive-form-as-template)** – 透過將現有的品牌認可表單儲存為表單範本以快速重複使用，促進和標準化表單開發工作。<!-- OLD. UPDATE FOR JUNE 7 -->
 * **[將 AEM Forms 連接至支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html#configure-relational-database-configure-relational-database)** – 使用 JDBC 通訊協定直接從 AEM Cloud Service 連接至企業資料庫，而不需透過 REST API 公開它們。<!-- OLD. UPDATE FOR JUNE 7 -->
@@ -305,7 +305,7 @@ _新功能_
 
 ### Headless 調適型表單早期採用者計劃
 
-使用 Headless 最適化表單讓您的開發人員能夠建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless調適型表單可協助您：<!-- OLD. UPDATE FOR JUNE 7 -->
+使用 Headless 最適化表單讓您的開發人員能夠建立、發佈和管理可透過 API 存取和互動的互動式表單，而不是透過傳統的圖形使用者介面。Headless 調適型表單可協助您：<!-- OLD. UPDATE FOR JUNE 7 -->
 
 * 使用您選擇的程式語言建置高品質的多管道表單。<!-- OLD. UPDATE FOR JUNE 7 -->
 * 以原生方式將表單整合到您的桌面和行動應用程式、網站和聊天應用程式<!-- OLD. UPDATE FOR JUNE 7 -->
@@ -341,8 +341,8 @@ _版本重點_
 
 _已知問題_
 
-* 使用 AEM 6.4 設定專案連結的資料夾時，[!DNL Experience Manager] 未儲存「**子資料夾**」和「**在產品組合的專案中建立連結的資料夾**」欄位的值。「**sub-folders**」欄位的值更新為&#x200B;**未定義**。的值 **在具有投資組合的專案中建立連結資料夾** 欄位更新至 **預設Portfolio** 儲存設定後自動進行。 <!-- NEW. LEAVE IN FOR JUNE 7 -->
-* 當您使用傳統 Workfront 體驗時，「**更多**」下拉式清單中的「**傳送至**」選項不允許您選取 Experience Manager 中的目標目的地。 使用「**文件動作**」下拉式清單時，「**傳送至**」選項正常運作。此 **傳送至** 選項正確運作於 **更多** 下拉式清單與 **檔案動作** 新Workfront體驗中可用的下拉式清單。<!-- NEW. LEAVE IN FOR JUNE 7 -->
+* 使用 AEM 6.4 設定專案連結的資料夾時，[!DNL Experience Manager] 未儲存「**子資料夾**」和「**在產品組合的專案中建立連結的資料夾**」欄位的值。「**sub-folders**」欄位的值更新為&#x200B;**未定義**。儲存設定後，「**在產品組合的專案中建立連結的資料夾**」欄位的值會自動更新為&#x200B;**預設產品組合**。<!-- NEW. LEAVE IN FOR JUNE 7 -->
+* 當您使用傳統 Workfront 體驗時，「**更多**」下拉式清單中的「**傳送至**」選項不允許您選取 Experience Manager 中的目標目的地。 使用「**文件動作**」下拉式清單時，「**傳送至**」選項正常運作。在使用新的 Workfront 體驗時，「**更多**」下拉式清單和「**文件動作**」下拉式清單的「**傳送至**」選項正常運作。<!-- NEW. LEAVE IN FOR JUNE 7 -->
 
 ### 社群
 
