Updating Old File for core commit

--- a/c-legacy-releases/2023/02082023.md
+++ b/c-legacy-releases/2023/02082023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: aa3b87a4-1d1d-4820-aaa6-09b0046039af
 source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '3979'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -198,7 +198,7 @@ _新功能_
 
 * [體驗片段的個人化標籤](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/sites/authoring/fundamentals/experience-fragments.html#personalization-experience-fragment)允許[!UICONTROL 體驗片段編輯器]的分段規格功能和建立巢狀[!UICONTROL 體驗片段]的靈活性。 如此可為多個片段建立各種不同的頁首和頁尾。 在此功能推出前，AEM 提供的個人化僅適用於網站頁面，但不適用於體驗片段
 * [內容片段主控台](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/sites/administering/content-fragments/content-fragments-console.html)現在讓使用者有效地管理翻譯的內容片段。可透過一鍵式存取的方式檢視所有語言副本。 使用者可依照他們感興趣的地區設定來篩選表格視圖。
-* 透過最佳化範本中的影像大小設訂，進一步縮短訪客的頁面載入時間。如需影像元件的詳細資訊，請參閱 [核心WCM元件](https://github.com/adobe/aem-core-wcm-components).
+* 透過最佳化範本中的影像大小設訂，進一步縮短訪客的頁面載入時間。在[核心 WCM 元件](https://github.com/adobe/aem-core-wcm-components)尋找影像元件的詳細資訊。
 
 ### Experience Manager [!DNL Assets] as a [!DNL Cloud Service]
 
