--- a/c-legacy-releases/2023/07122023.md
+++ b/c-legacy-releases/2023/07122023.md
@@ -7,7 +7,7 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 6180abeb-9d5f-4a23-bbcd-ebb7f4407398
 source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4610'
 ht-degree: 100%
 
