--- a/c-legacy-releases/2023/10252023.md
+++ b/c-legacy-releases/2023/10252023.md
@@ -1,6 +1,6 @@
 ---
 title: 發行說明 - 2023 年 11 月
-description: 尋找Adobe的最新發行說明 [!DNL Experience Cloud] 產品和服務。 了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 找到 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: November 2023
 author: mfrei
@@ -8,7 +8,7 @@ mini-toc-levels: 2
 source-git-commit: 1928c6799fbc8ee5b11e533475e448c8ab1da80b
 workflow-type: tm+mt
 source-wordcount: '5550'
-ht-degree: 98%
+ht-degree: 99%
 
 ---
 
@@ -18,24 +18,24 @@ ht-degree: 98%
 
 <!-- ![Banner](assets/release-notes-header.png) -->
 
-此頁面可協助您尋找Experience Cloud和Adobe企業應用程式的發行說明。 為獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home) 並在Adobe的免費資料庫中自訂您的搜尋體驗 [檔案](https://experienceleague.adobe.com/docs/)， [課程](https://experienceleague.adobe.com/#courses)， [事件](https://experienceleague.adobe.com/events/)， [社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)、和 [支援](https://experienceleague.adobe.com/?support-tab=home#support).
+此頁面可協助您尋找 Experience Cloud 和 Adobe 企業應用程式的發行說明。為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/)庫、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)中自訂您的搜尋體驗。
 
 若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
 
 ## 2023 年 11 月/12 月
 
-最新更新： **2024年1月5日**
+上次更新日期：**2024 年 1 月 5 日**
 
-* [[!DNL Experience League] 活動和更新](#events) (已更新 **1月5日**)
+* [[!DNL Experience League] 活動與最新訊息](#events) (**1 月 5 日**&#x200B;更新)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
-* [[!DNL Adobe Experience Platform]](#platform) (已發行 **10月25日**)<!-- * [[!DNL Adobe Real-Time Customer Data Platform]](#rtcdp) -->
-* [[!DNL Adobe Analytics]](#analytics) (已發行 **10月25日**)
-* [[!DNL Adobe Customer Journey Analytics]](#cja) (已發行 **10月25日**)
+* [[!DNL Adobe Experience Platform]](#platform) (**10 月 25 日**&#x200B;發行)<!-- * [[!DNL Adobe Real-Time Customer Data Platform]](#rtcdp) -->
+* [[!DNL Adobe Analytics]](#analytics) (**10 月 25 日**&#x200B;發行)
+* [[!DNL Adobe Customer Journey Analytics]](#cja) (**10 月 25 日**&#x200B;發行)
 * [[!DNL Adobe Streaming Media Analytics]](#sma)
 * [[!DNL Adobe Audience Manager]](#aam)
-* [[!DNL Adobe Experience Manager]](#aem) (已發行 **10月26日**)
+* [[!DNL Adobe Experience Manager]](#aem) (**10 月 26 日**&#x200B;發行)
 * [[!DNL Adobe Commerce]](#commerce)
 * [[!DNL Adobe Target]](#target)
 * [[!DNL Adobe Campaign]](#ac)
@@ -58,7 +58,7 @@ ht-degree: 98%
 
 ### Experience League 活動
 
-已更新 **2024年1月5日**
+**2024 年 1 月 5 日**&#x200B;更新
 
 +++即將推出的 Experience League 活動
 
@@ -129,7 +129,7 @@ ht-degree: 98%
 
 +++詳細資訊
 
-* [[!DNL Experience Platform] 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html) (**10月25日**)
+* [[!DNL Experience Platform] 發行說明：](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html) (**10 月 25 日**)
 
 * [[!DNL Experience Platform] Mobile SDK 發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)
 
@@ -403,7 +403,7 @@ _早期採用者計劃_
    * 此功能可使用的早期採用者計劃很有限。
    * 此功能用於恢復意外刪除的內容，不適用於災難復原。
 
-* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard.html?lang=en)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的深入解析和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
+* **體驗稽核儀表板** – [Cloud Manager 體驗稽核儀表板](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/experience-audit-dashboard.html?lang=zh-Hant)包括頁面效能分數的趨勢檢視，以及可協助您提高效能分數的深入解析和建議。體驗稽核會隨附為 Cloud Manager 生產管道中的一個步驟。
 
   該儀表板使用 Google Lighthouse，這是一種開放原始碼自動化工具，可提升網頁應用程式的品質。您可以在任何公開網頁或需要驗證的任何網頁上執行此功能。可用於對效能、協助工具、漸進式網頁應用程式、SEO 等進行稽核。
 
@@ -532,7 +532,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 +++詳細資訊
 
 * 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html)以取得最新資訊。
-* 另請參閱 [Adobe Commerce Services指南](https://experienceleague.adobe.com/docs/commerce-merchant-services/user-guides/home.html) 以檢視Commerce Services發行資訊和檔案。
+* 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/docs/commerce-merchant-services/user-guides/home.html)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html)以存取個別的產品發行說明並確認可用性。
 
 >[!NOTE]
