Updating Old File for core commit

--- a/c-legacy-releases/2023/08092023.md
+++ b/c-legacy-releases/2023/08092023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: f61fcb42-2eba-4993-9543-2b316ae718a6
 source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4254'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -309,7 +309,7 @@ _搶鮮版管道的新功能_
 _新功能_
 
 * **為影像智慧標記改良人工智慧框架** – Experience Manager Assets 現在為影像智慧標記使用改良的人工智慧框架。此內容智慧可提高智慧標記的相關性和準確性，在擷取時可用於所有影像資產。
-* **設定「資產清單」檢視的欄顯示** -Assets Essentials現在可讓您選取在「資產清單」檢視中顯示的欄，例如「名稱」、「狀態」、「格式」、「Dimension」、「大小」和「已修改」。
+* **設定資產清單檢視的資料欄顯示方式** - Assets Essentials 現在可讓您選取在資產清單檢視中顯示的資料欄，例如「名稱」、「狀態」、「格式」、「維度」、「大小」和「已修改」。
 * **根據相關性對搜尋結果進行排序** – Assets Essentials 現在預設會根據相關性對搜尋結果進行排序。您可以依照 `Name`、`Relevance`、`Size`、`Modified` 和 `Created` 的遞增或遞減順序來排序搜尋到的資產。
 
 ### [!DNL Experience Manager Forms] as a [!DNL Cloud Service]
