Updating Old File for core commit

--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 50843662-c272-43de-a737-04a0ee20cb0b
 source-git-commit: d0cff08b97c8ad49920f3ca9ed8aec4c70cdaca5
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4306'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -73,7 +73,7 @@ ht-degree: 99%
 
 +++即將到來的活動
 
-另請參閱 [Experience League事件](https://experienceleague.adobe.com/events/)
+請參閱 [Experience League 活動](https://experienceleague.adobe.com/events/)
 
 +++
 
@@ -424,7 +424,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 5 月 | [Headless 架構研討會 1](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/headless-architecture/introduction-to-headless/session-1.html) | 影片 | 了解什麼是 Headless 架構、可組合的商務和個人化體驗。 |
-| 2023 年 5 月 | [完整示範[!UICONTROL 即時搜尋]](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/getting-started/capabilities/live-search-full-demonstration.html?lang=en) | 影片 | 觀看[!UICONTROL 即時搜尋]功能和彈性的完整示範。 |
+| 2023 年 5 月 | [完整示範[!UICONTROL 即時搜尋]](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/getting-started/capabilities/live-search-full-demonstration.html?lang=zh-Hant) | 影片 | 觀看[!UICONTROL 即時搜尋]功能和彈性的完整示範。 |
 | 2023 年 5 月 | [[!UICONTROL 即時搜尋]簡介](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search.html) | 影片 | 了解 Adobe Commerce 的[!UICONTROL 即時搜尋]功能如何提供快速、相關且直覺的搜尋體驗。 |
 | 2023 年 5 月 | [自我裝載的 Adobe Commerce 概觀](https://experienceleague.adobe.com/docs/commerce-operations/implementation-playbook/infrastructure/self-hosting/overview.html) | 影片 | 了解移至電子商務平台時要考慮的自我裝載最佳做法。 |
 
