Updating Old File for core commit

--- a/c-legacy-releases/2023/10252023.md
+++ b/c-legacy-releases/2023/10252023.md
@@ -6,9 +6,9 @@ last-update: November 2023
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: 1928c6799fbc8ee5b11e533475e448c8ab1da80b
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5550'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -58,7 +58,7 @@ ht-degree: 99%
 
 ### Experience League 活動
 
-**2024 年 1 月 5 日**&#x200B;更新
+更新時間：**2024 年 1 月 5 日**
 
 +++即將推出的 Experience League 活動
 
